# Data_Engineering_Project

./: LICENSE
HristoScraper/: pyproject.toml  setup.cfg  setup.py
HristoScraper/rds_uploader/: __init__.py  rds_module_1.py
HristoScraper/scraper/: __init__.py  __main__.py  main.py  scraping.py
HristoScraper/src/scraper/: __main__.py  scraping.py
test/: test_module_1.py  test_module_2.py  test_project.py
