[metadata]
name = HristoScraper
version = 0.0.8
author = Hristo Petkov
author_email = xristo01@gmail.com
short_description = for scraping car sales websites
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xristo01/Data_Engineering_Project
classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.7
include_package_data = True